# Customer-Retention-Analytics

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb  model.ipynb
